feat(backend): add project member endpoint [BE-S006-02]
