# backend-spring-boot/src/main/java/com/projectmanagementsystem/project/dto/AddProjectMemberResponse.java
@@ -1,0 +1,6 @@
+package com.projectmanagementsystem.project.dto;
+
+public record AddProjectMemberResponse(
+        String userId,
+        String role
+) {}
